<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/listviewfirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listviewFirstname" />

    <TextView
        android:id="@+id/first_nameRetr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder1"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/listviewfirstname" />

    <TextView
        android:id="@+id/listviewlastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listviewLastname"
        android:layout_below="@+id/listviewfirstname"
        />

    <TextView
        android:id="@+id/last_nameRetr"
        android:text="@string/placeholder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/listviewlastname"
        android:layout_below="@id/first_nameRetr"
        android:layout_alignStart="@+id/first_nameRetr"/>


    <TextView
        android:id="@+id/listviewgender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listviewGender"
        android:layout_below="@+id/listviewlastname"
        />

    <TextView
        android:id="@+id/gender_retr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder5"
        android:layout_toRightOf="@+id/listviewgender"
        android:layout_below="@+id/last_nameRetr"
        android:layout_alignStart="@+id/first_nameRetr"/>


    <TextView
        android:id="@+id/listviewdepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listviewDepartment"
        android:layout_below="@+id/listviewgender"
        />

    <TextView
        android:id="@+id/departmentRetr"
        android:text="@string/placeholder3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/listviewdepartment"
        android:layout_below="@+id/gender_retr"
        android:layout_alignStart="@+id/first_nameRetr"/>


    <TextView
        android:id="@+id/listviewhealthid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listviewHealthID"
        android:layout_below="@+id/listviewdepartment"

        />

    <TextView
        android:id="@+id/health_idRetr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder4"
        android:layout_toRightOf="@+id/listviewhealthid"
        android:layout_below="@+id/departmentRetr"
        android:layout_alignStart="@+id/first_nameRetr"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_details"
        android:id="@+id/button_details"
        android:background="@color/fab1"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:background="@color/fab"
        android:textColor="@color/white"
        android:id="@+id/button_delete"
        android:layout_marginEnd="10dp"
        android:layout_alignBottom="@+id/health_idRetr"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
    </ScrollView>