<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="denis.stepanov.AddTestActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_by_id"
        android:id="@+id/name_by_id"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_pateint"
        android:layout_below="@+id/name_by_id"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_pressure"
        android:id="@+id/blood_pressure"
        android:textStyle="bold"
        android:layout_below="@+id/spinner_pateint"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blood_pressure"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_positive"
        android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_positive"
        android:id="@+id/radio_positive"
        android:layout_marginTop="5dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_negative"
        android:id="@+id/radio_negative"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cholesterol"
        android:textStyle="bold"
        android:id="@+id/cholesterol"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="3"
        android:id="@+id/cholesterol_number"
        android:hint="@string/hint_cholesterol"
        android:maxLength="3"
        android:layout_below="@+id/cholesterol"
        android:layout_alignEnd="@+id/button_add_test"
        android:layout_alignStart="@+id/button_add_test" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:id="@+id/temperature"
        android:layout_below="@+id/cholesterol_number"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="3"
        android:id="@+id/temperature_number"
        android:hint="@string/hint_temperature"
        android:layout_below="@+id/temperature"
        android:layout_marginTop="5dp"
        android:maxLength="4"
        android:layout_alignStart="@+id/button_add_test"
        android:layout_alignEnd="@+id/button_add_test" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resp_rate"
        android:id="@+id/resp_rate"
        android:textStyle="bold"
        android:layout_below="@+id/temperature_number"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="3"
        android:id="@+id/resp_rate_number"
        android:hint="@string/resp_rate_number"
        android:maxLength="2"
        android:layout_below="@+id/resp_rate"
        android:layout_alignEnd="@+id/button_add_test"
        android:layout_alignStart="@+id/button_add_test" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_oxygen_level"
        android:id="@+id/blood_oxygen_level"
        android:textStyle="bold"
        android:layout_below="@+id/resp_rate_number"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="3"
        android:id="@+id/blood_oxygen_level_number"
        android:hint="@string/blood_oxygen_level_number"
        android:maxLength="3"
        android:layout_below="@+id/blood_oxygen_level"
        android:layout_alignEnd="@+id/button_add_test"
        android:layout_alignStart="@+id/button_add_test" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_beat_rate"
        android:id="@+id/heart_beat_rate"
        android:textStyle="bold"
        android:layout_below="@+id/blood_oxygen_level_number"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="3"
        android:id="@+id/heart_beat_rate_number"
        android:hint="@string/heart_beat_rate_number"
        android:maxLength="3"
        android:layout_below="@+id/heart_beat_rate"
        android:layout_alignEnd="@+id/button_add_test"
        android:layout_alignStart="@+id/button_add_test" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/date"
        android:textStyle="bold"
        android:layout_below="@+id/heart_beat_rate_number"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:focusable="false"
        android:id="@+id/date_number"
        android:layout_below="@+id/date"
        android:hint="@string/select_date"
        android:layout_alignEnd="@+id/button_add_test"
        android:layout_marginBottom="60dp"
        android:layout_alignStart="@+id/button_add_test" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_test"
        android:id="@+id/button_add_test"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/fab"
        android:textColor="@color/white"
        android:layout_below="@id/date_number"
        android:layout_alignParentBottom="true"
      />

</RelativeLayout>
</ScrollView>